[package]
name = "rust_internship_assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.3.2"
chrono = "0.4.30"
clap = { version = "4.4.2", features = ["derive"] }
office = "0.8.1"
